# protobuf-wireshark

./: CHANGES.txt  Makefile.am.template  README.txt  addressbook.conf  addressbook_test.py  make_wireshark_plugin.py  moduleinfo.h.template  packet.c.template  svn-commit.tmp  wireshark-glue.cc.template  wireshark-glue.h.template  wireshark.conf
generic-dissector/: Makefile.am  moduleinfo.h  packet-GoogleProtoBuf.c  wireshark-glue-GoogleProtoBuf.cc
runtime/: CHANGES.txt  README.txt  addressbook.conf  make_wireshark_plugin.py  wireshark-glue.cc.template
runtime/generic-dissector/: generic.conf  make_generic.py
